--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -12,10 +12,11 @@
 	<artifactId>dependency</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>dependency</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo project for dependency management in Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+
 
 	<dependencies>
 		<dependency>
@@ -29,7 +30,6 @@
 			<optional>true</optional>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -41,14 +41,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
 			<version>2.23.0</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
@@ -56,6 +54,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
@@ -71,6 +70,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 
