--- a/db/pom.xml
+++ b/db/pom.xml
@@ -43,6 +43,12 @@
    			 <artifactId>h2</artifactId>
    			 <scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.5.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
